# ChangeLog for virtual/emacs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-23-r1 (16 Jan 2010)

  16 Jan 2010; Ulrich Mueller <ulm@gentoo.org> -emacs-23.ebuild,
  +emacs-23-r1.ebuild:
  Remove emacs-cvs from RDEPEND. Revision bump, bug 301215.

  20 Dec 2009; Ulrich Mueller <ulm@gentoo.org> emacs-23.ebuild:
  Add emacs-vcs to alternatives.

  28 Sep 2009; Ulrich Mueller <ulm@gentoo.org> emacs-23.ebuild:
  Change to slot dependencies and EAPI 2. Remove emacs-cedet-branch from
  alternatives since it was merged to the trunk.

*emacs-23 (09 Sep 2009)

  09 Sep 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-23.ebuild,
  +metadata.xml:
  Add emacs-cedet-branch and emacs-lexbind to RDEPEND.
